--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
           <label class="form-label">Username:</label>
           <input id="txtUsername" type="email" class="form-control">
           <label class="form-label">Password:</label>
-          <input id="txtPassword" type="text" class="form-control">
+          <input id="txtPassword" type="password" class="form-control">
           <button id="btnLogin" type="button" class="btn btn-primary mt-2 col-12">Login</button>
           <button id="btnRegister" type="button" class="btn btn-warning mt-1 col-12">Register Account</button>
         </form>
       </div>
     </div>
+  </div>
     <div class="col-12 col-md-8 offset-md-2 card mt-5" id="divDashboard" style="float: center; background-color: rgb(230, 201, 164); display: none;">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -35,6 +36,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true">Logout</a>
               </li>
             </ul>
 
@@ -63,27 +67,24 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <!--This is open and close door-->
+                <div class="col-4"> 
                     <div class="card">
                         <div class="card-body">
-                            <div class="image-container">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-door-open" viewBox="0 0 16 16">
-                                  <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1" />
-                                  <path d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5M4 1.934V15h6V1.077z" />
-                                </svg>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-door-closed-fill" viewBox="0 0 16 16">
-                                  <path d="M12 1a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2a1 1 0 0 1 1-1zm-2 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2" />
-                                </svg>
-                                <p>Door Control.</p>
-                                <div class="form-check form-switch">
-                                  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                                  <label class="form-check-label" for="flexSwitchCheckDefault">Door Control</label>
-                                </div>
-                                <p>No one is better than John Doe.</p>
-                            </div>
+                          <div class="image-container" id="btnDopen">
+                            <button type="button" class="btn">
+                                <i class="bi bi-door-open" style="font-size: 65px;" id="light" data-state="on"></i>
+                            </button>
+                          </div>
+                          <div class="image-container" id="btnLbOff" style="display: none;" id="btnDclose">
+                            <button type="button" class="btn">
+                              <i class="bi bi-door-closed"></i>
+                            </button>
+                          </div>
                         </div>
                     </div>
                 </div>
+                <!--This is Turn light on and off-->
                 <div class="col-4">
                     <div class="card">
                         <div class="card-body">
@@ -98,7 +99,7 @@
                                 </button>
                             </div>
                             <div class="card-body" style="display: inline-block;">
-                              <p>Door Control.</p>
+                              <p>Light Control.</p>
                               <div class="form-check form-switch">
                                 <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                                 <label class="form-check-label" for="flexSwitchCheckDefault">Light on or off</label>
@@ -108,6 +109,7 @@
                         </div>
                     </div>
                 </div>
+              </div>
             </div>
       </body>
     </div>
@@ -249,6 +251,7 @@
           }
         });
         //click events for dashboard
+        //Light
         $('#btnLbOn').on('click',function(){
             let strState = $(this).attr('data-state');
             if(strState == 'on'){
@@ -262,8 +265,40 @@
                 $('#light').removeClass('bi-lightbulb-off');
                 $('#light').addClass('text-warning');
             }
-            
         })
+        //Door
+        $('#btnDopen').on('click',function(){
+            let strState = $(this).attr('data-state');
+            if(strState == 'on'){
+                $('#btnDopen').attr('data-state','off');
+                $('#light').addClass('bi bi-door-closed');
+                $('#light').removeClass('bi bi-door-open');
+                $('#light').removeClass('text-warning');
+            } else {
+                $('#btnDopen').attr('data-state','on');
+                $('#light').addClass('bi bi-door-open');
+                $('#light').removeClass('bi bi-door-closed');
+                $('#light').addClass('text-warning');
+            }
+          })
+
+
+//
+          $('#btnDopen').on('click',function(){
+            let strState = $(this).attr('data-state');
+            if(strState == 'on'){
+                $('#btnDopen').attr('data-state','off');
+                $('#light').addClass('bi bi-door-closed');
+                $('#light').removeClass('bi bi-door-open');
+                $('#light').removeClass('text-warning');
+            } else {
+                $('#btnDopen').attr('data-state','on');
+                $('#light').addClass('bi bi-door-open');
+                $('#light').removeClass('bi bi-door-closed');
+                $('#light').addClass('text-warning');
+            }
+          })
+
         //End click events
         $('#btnComplete').on('click', function() {
           let strtxtFirstName = $('#txtFirstName').val();
